--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
   <button class="btn dragon"><i class="fas fa-dragon"></i> Summon Dragon</button>
   <button class="btn fire"><i class="fas fa-fire"></i> Ignite Fire</button>
   <button class="btn lightning"><i class="fas fa-bolt"></i> Cast Lightning</button>
+  <button class="btn heal"><i class="fas fa-heart"></i> Heal</button>
+
 </body>
 </html>
+
