Add Healing Button 💚 to index.html
Adds a new healing button with heart icon and soft green-blue gradient to the demo.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <button class="btn dragon"><i class="fas fa-dragon"></i> Summon Dragon</button>
   <button class="btn fire"><i class="fas fa-fire"></i> Ignite Fire</button>
   <button class="btn lightning"><i class="fas fa-bolt"></i> Cast Lightning</button>
-  <button class="btn heal"><i class="fas fa-heart"></i> Heal</button>
+  <button class="btn heal"><i class="fas fa-heart"></i> Healing</button>
 
 </body>
 </html>
